Added checkbox to reduce FPS (to 1, default 40)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
      <li>Raster: <span id="curraster"></span></li>
      <li>Clock speed: <span id="clock"></span></li>
      <li>Rendering: <span id="curperiod"></span></li>
+     <li>Reduce FPS: <input type="checkbox" id="lightmode"></input></li>
     </ul>
     <div id="reset">Hard Reset</div>
    </div>
