A link to GitHub in the footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    </div>
   </div>
   <div class="foot">
-   Developed by <a href="http://imrannazar.com/">Imran Nazar</a>, 2014. v0.1 alpha.
+   Developed by <a href="http://imrannazar.com/">Imran Nazar</a>, 2014. Now on <a href="https://github.com/Two9A/c64clicker">GitHub</a>.
   </div>
  </body>
 </html>
