--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
     <em>This is not a full simulation of a C64. Not yet, anyways.</em>
    </div>
   </div>
-  <div id="bank">&nbsp;</div>
-  <div id="cps">&nbsp;</div>
-  <div id="click">Reticulating splines...</div>
+  <div class="topbar">
+   <div class="joystick">
+    <div id="joy_up">U</div>
+    <div id="joy_left">L</div>
+    <div id="joy_right">R</div>
+    <div id="joy_down">D</div>
+    <div id="joy_fire">Fire</div>
+   </div>
+   <div id="bank">&nbsp;</div>
+   <div id="cps">&nbsp;</div>
+   <div id="click">Reticulating splines...</div>
+  </div>
   <div class="content">
    <div class="sidebar">
     <div class="items">
