--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
    </div>
    <div class="screen">
     <canvas id="screen" width="504" height="312"></canvas>
+    <div class="cursor_x"></div>
+    <div class="cursor_y"></div>
     <ul class="status">
      <li>Frame: <span id="curframe"></span>, raster: <span id="curraster"></span></li>
      <li>Clock speed: <span id="clock"></span></li>
