1541 available in-game

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     <canvas id="screen" width="504" height="312"></canvas>
     <div class="cursor_x"></div>
     <div class="cursor_y"></div>
+    <div class="disk hidden">
+     <div class="disk_drive">1541 Disk Drive</div>
+     <select id="disk_files"></select>
+     <div id="disk_power"></div>
+     <div class="disk_bar"><span id="disk_progress"></span></div>
+    </div>
     <ul class="status">
      <li>Frame: <span id="curframe"></span>, raster: <span id="curraster"></span></li>
      <li>Clock speed: <span id="clock"></span></li>
